--- a/prelims.tex
+++ b/prelims.tex
@@ -47,12 +47,12 @@ consists of a \emph{state space} $X\subseteq \mathbb{R}^n$,
 an \emph{initial state} $x_\init\in X$,
  an \emph{input space} $U\subseteq\mathbb{R}^m$, 
 a compact \emph{disturbance set} $W\subset \mathbb{R}^n$ and
-a \emph{nominal dynamics} $f:X\times U\rightarrow X$. There exists a locally Lipschitz function $f_c\colon X\times U\rightarrow X$ and an absolutely continuous function $\beta\colon \reals \rightarrow X$ such that for every $x\in X$, constant $u\in U$ and fixed sampling time $\tau>0$, 
+a \emph{nominal dynamics} $f:X\times U\rightarrow X$. There exists a locally Lipschitz function $f_{con}\colon X\times U\rightarrow X$ and an absolutely continuous function $\beta\colon \reals \rightarrow X$ such that for every $x\in X$, constant $u\in U$ and fixed sampling time $\tau>0$, 
 \begin{align}
-	&\dot \beta = f_c(\beta(t),u) \quad \beta(0) =x\nonumber\\
-	 &f(x,u) =\beta(\tau).
+	&\dot \beta = f_{con}(\beta(t),u) \quad \beta(0) =x\nonumber\\
+	 &f(x,u) =\beta(\tau).\label{eq:cont_to_disc}
 \end{align}
-Therefore, we can characterize nominal dynamics $f$ using $f_c$ and $\tau$. %For a given time horizon $T$, a (state) \emph{trajectory} of $\Sigma$ is a function $\xi\colon[0;T]\rightarrow X$ such that $\xi(0)=x_0$ and $\xi(\cdot)$ fulfills the following inclusion relation for every $t\in[0;T]$:
+Therefore, we can characterize nominal dynamics $f$ using $f_{con}$ and $\tau$. %For a given time horizon $T$, a (state) \emph{trajectory} of $\Sigma$ is a function $\xi\colon[0;T]\rightarrow X$ such that $\xi(0)=x_0$ and $\xi(\cdot)$ fulfills the following inclusion relation for every $t\in[0;T]$:
 For an initial state $x_0$ and a control input $u\in U$, we define
 \begin{equation}\label{equ:def_f}
 	\Sol_\Sigma(x_0,u)=\set{x\mid x\in f(x_0,u) + W}. 
